Replaces the old pifind email script with a websocket implementation. Also added a cameraID field to the ini file which gets randomly generated the first time a websocket connection is made.

--- a/livelot-tracker/LotConfig.ini
+++ b/livelot-tracker/LotConfig.ini
@@ -6,3 +6,4 @@ lotId = 5db10d68660f730017cddd1e
 #false will keep them the same while true will flip them
 flipBoundary = false
 
+#CameraID initially is -1 until a UUID is generated for it on websocket connection
