--- a/livelot-tracker/LotConfig.ini
+++ b/livelot-tracker/LotConfig.ini
@@ -1,9 +1,9 @@
 [Lot]
-#Lot ID from API
-lotId = 5db10d68660f730017cddd1e
-
-#Default configuration right=inside and left=outside or above=outside and below=inside
+#lot id from api
+lotid = 5db10d68660f730017cddd1e
+#default configuration right = inside and left=outside or above=outside and below=inside
 #false will keep them the same while true will flip them
-flipBoundary = false
+flipboundary = false
+#cameraid initially is -1 until a uuid is generated for it on websocket connection
+cameraid = -1
 
-#CameraID initially is -1 until a UUID is generated for it on websocket connection
