removed lotID so it is a template

--- a/livelot-tracker/LotConfig.ini
+++ b/livelot-tracker/LotConfig.ini
@@ -1,6 +1,6 @@
 [Lot]
 #lot id from api
-lotid = 5db10d68660f730017cddd1e
+lotid = -1 
 #default configuration right = inside and left=outside or above=outside and below=inside
 #false will keep them the same while true will flip them
 flipboundary = false
