Cb websocket stuff (#15)
* Replaces the old pifind email script with a websocket implementation. Also added a cameraID field to the ini file which gets randomly generated the first time a websocket connection is made.

* connected to api

* Added comments to the pifind script

* removed lotID so it is a template

--- a/livelot-tracker/LotConfig.ini
+++ b/livelot-tracker/LotConfig.ini
@@ -1,8 +1,9 @@
 [Lot]
-#Lot ID from API
-lotId = 5db10d68660f730017cddd1e
-
-#Default configuration right=inside and left=outside or above=outside and below=inside
+#lot id from api
+lotid = -1 
+#default configuration right = inside and left=outside or above=outside and below=inside
 #false will keep them the same while true will flip them
-flipBoundary = false
+flipboundary = false
+#cameraid initially is -1 until a uuid is generated for it on websocket connection
+cameraid = -1
 
