feat: listening on client for response to server updates

--- a/livelot-tracker/LotConfig.ini
+++ b/livelot-tracker/LotConfig.ini
@@ -1,6 +1,8 @@
 [Lot]
+# lot name
+lotname = X
 #lot id from api
-lotid = -1 
+lotid = -1
 #default configuration right = inside and left=outside or above=outside and below=inside
 #false will keep them the same while true will flip them
 flipboundary = false
