--- a/livelot-tracker/LotConfig.ini
+++ b/livelot-tracker/LotConfig.ini
@@ -1,9 +1,9 @@
 [Lot]
 #lot id from api
-lotid = -1 
+lotid = 5db10d68660f730017cddd1e
 #default configuration right = inside and left=outside or above=outside and below=inside
 #false will keep them the same while true will flip them
-flipboundary = false
+flipboundary = true
 #cameraid initially is -1 until a uuid is generated for it on websocket connection
-cameraid = -1
+cameraid = b26ae1de-9a12-4459-a1b8-a8f96335304c
 
