--- a/livelot-tracker/LotConfig.ini
+++ b/livelot-tracker/LotConfig.ini
@@ -5,7 +5,7 @@ lotname = X
 lotid = -1
 #default configuration right = inside and left=outside or above=outside and below=inside
 #false will keep them the same while true will flip them
-flipboundary = false
+flipboundary = true
 #cameraid initially is -1 until a uuid is generated for it on websocket connection
 cameraid = -1
 
